...
                        <rect key="frame" x="0.0" y="0.0" width="375" height="667"/>
                        <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
                        <subviews>
                            <stackView opaque="NO" contentMode="scaleToFill" axis="vertical" distribution="fillEqually" spacing="10" translatesAutoresizingMaskIntoConstraints="NO" id="b2U-p7-5DC">
                                <rect key="frame" x="30" y="90" width="315" height="100"/>
                                <subviews>
                                    <textField opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="left" contentVerticalAlignment="center" borderStyle="line" placeholder="Enter username" minimumFontSize="17" translatesAutoresizingMaskIntoConstraints="NO" id="4T8-cM-RQW">
                                        <rect key="frame" x="0.0" y="0.0" width="315" height="45"/>
                                        <nil key="textColor"/>
                                        <fontDescription key="fontDescription" name="HelveticaNeue" family="Helvetica Neue" pointSize="17"/>
                                        <textInputTraits key="textInputTraits" enablesReturnKeyAutomatically="YES"/>
                                    </textField>
                                    <textField opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="left" contentVerticalAlignment="center" borderStyle="line" placeholder="Enter password" minimumFontSize="17" translatesAutoresizingMaskIntoConstraints="NO" id="IVJ-r7-z4F">
                                        <rect key="frame" x="0.0" y="55" width="315" height="45"/>
                                        <nil key="textColor"/>
                                        <fontDescription key="fontDescription" name="HelveticaNeue" family="Helvetica Neue" pointSize="17"/>
                                        <textInputTraits key="textInputTraits" secureTextEntry="YES"/>
                                    </textField>
                                </subviews>
...
                                <rect key="frame" x="30" y="210" width="315" height="100"/>
                                <subviews>
                                    <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="FCY-tE-RGi">
                                        <rect key="frame" x="0.0" y="0.0" width="315" height="45"/>
                                        <color key="backgroundColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
                                        <fontDescription key="fontDescription" name="HelveticaNeue-Bold" family="Helvetica Neue" pointSize="17"/>
                                        <state key="normal" title="Login">
                                            <color key="titleColor" red="0.33698450330000002" green="0.54892488510000004" blue="0.82497223980000001" alpha="0.59762949489999995" colorSpace="custom" customColorSpace="displayP3"/>
                                        </state>
                                        <connections>
                                            <action selector="loginButtonClick:" destination="RKY-7g-93L" eventType="touchUpInside" id="3KH-tn-Foq"/>
                                        </connections>
                                    </button>
...
